--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -1,12 +1,13 @@
 .rewards {
     grid-area: re;
+    width: 1366px;
     background: rgb(198, 198, 212);
     background: linear-gradient(90deg, rgba(198, 198, 212, 1) 0%, rgba(122, 147, 153, 1) 0%, rgba(251, 251, 251, 1) 0%, rgba(160, 160, 255, 1) 100%);
 }
 
 .itemReward {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(5, 270px);
     text-align: center;
 }
 
