--- a/src/components/service/service.css
+++ b/src/components/service/service.css
@@ -1,7 +1,7 @@
 .serviceMenu {
     grid-area: se;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 450px);
     grid-auto-rows: minmax(40px, auto);
     text-align: center;
     align-items: center;
