--- a/src/components/advantages/advantages.css
+++ b/src/components/advantages/advantages.css
@@ -7,7 +7,7 @@
 .advContent {
     position: absolute;
     align-self: center;
-    justify-self: center;
+    margin-left: 150px;
 }
 
 .advLogo {
@@ -29,6 +29,6 @@
 }
 
 .advImg img {
-    width: 1366px;
+    width: 1349px;
     height: 500px;
 }
