--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -3,7 +3,7 @@
     display: grid;
     text-transform: uppercase;
     font-family: 'Lato Regular', serif;
-    grid-template-columns: repeat(5, 270px);
+    grid-template-columns: repeat(5, 265px);
     grid-auto-rows: minmax(40px, auto);
     text-align: center;
     align-items: center;
@@ -20,7 +20,8 @@
 }
 
 .menu img {
-    margin-left: 40px;
+    margin-left: 72px;
+    margin-top: 9px;
     width: 120px ;
     height: 70px;
 }
