--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,6 +12,14 @@
     font-size: 13px;
 }
 
+.logo {
+    display: grid;
+    grid-template-columns: repeat(3, 20px);
+    grid-gap: 20px;
+    justify-self: center;
+
+}
+
 .mail a {
     text-decoration: blink;
 }
