--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -1,5 +1,6 @@
 .rewards {
     grid-area: re;
+    display: grid;
     width: 1349px;
     background: rgb(198, 198, 212);
     background: linear-gradient(90deg, rgba(198, 198, 212, 1) 0%, rgba(122, 147, 153, 1) 0%, rgba(251, 251, 251, 1) 0%, rgba(160, 160, 255, 1) 100%);
