Добавил пункты меню Платные услуги и О клинике

--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -1,24 +1,17 @@
-.timetable {
-    display: grid;
-
-}
-
-thead {
-    text-align: left;
-}
-
-.timeHeadline {
+.infoHeadline {
     display: grid;
     width: 1349px;
     height: 100px;
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(0, 212, 255, 1) 0%, rgba(99, 99, 249, 1) 100%);
-    margin-bottom: 20px;
+    margin-bottom: 80px;
 }
 
-.timePos{
+.infoPos {
     align-self: center;
     justify-self: center;
 }
 
-
+.info img {
+    width: 100%;
+}
