Стилизовал разделы входа и регистрации, изменил ссылки на NavLink, сделал подсветку для активных ссылок в меню

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -39,3 +39,13 @@
     transition: all 0.3s;
     text-decoration: underline;
 }
+
+.logReg a {
+    text-decoration: blink;
+}
+
+.logReg a:hover {
+    color: white;
+    transition: all 0.3s;
+    text-decoration: underline;
+}
