--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -7,16 +7,20 @@
     grid-auto-rows: minmax(40px, auto);
     text-align: center;
     align-items: center;
+    font-weight: bolder;
+
+}
+
+a {
+    color: #000;
 }
 
 .menu a{
     text-decoration: blink;
 }
 
-.menu a:hover{
-    text-decoration: underline;
-    transition: all 0.3s;
-    color: royalblue;
+.menu a.active {
+    color: #00d4ff;
 }
 
 .menu img {
