--- a/src/components/regForm/regForm.css
+++ b/src/components/regForm/regForm.css
@@ -1,8 +1,79 @@
+form {
+    align-self: center;
+    justify-self: center;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(0, 212, 255, 1) 0%, rgba(99, 99, 249, 1) 100%);
+    height: 400px;
+    width: 550px;
+    border-radius: 5%;
+
+}
+
+.formCont input {
+    width: 250px;
+    height: 30px;
+
+}
+
+.formCont {
+    display: grid;
+    margin-top: 105px;
+    margin-left: 150px;
+}
+
+.Registration {
+    margin-bottom: 10px;
+}
+
+.wrapperReg {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 470px;
+}
+
+.form button {
+    width: 250px;
+    text-decoration: blink;
+    border-radius: 10%;
+    font-size: 17px;
+    line-height: 30px;
+    color: #0b2ee3;
+    background: none;
+    border: 2px solid #074bdd;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    outline: none;
+    margin-top: 20px;
+
+}
+
+.form button:hover {
+    color: white;
+    transition: all 0.3s;
+}
+
+.form {
+    display: grid;
+}
+
 .artReg {
     display: grid;
     width: 1349px;
+    height: 100px;
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(0, 212, 255, 1) 0%, rgba(99, 99, 249, 1) 100%);
-    text-align: center;
 }
+
+.posReg {
+    align-self: center;
+    justify-self: center;
+}
+
+
+
+
 
